# RandomGen

./: .gitignore  LICENSE  README.md  pyproject.toml
randomgen/: monte_carlo_rv.py
scripts/: data_figures.ipynb  demo.ipynb  my_table.docx
