[project]
name = "randomgen"
version = "0.0a1"
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "matplotlib",
  "statsmodels"
]
requires-python = ">=3.8"
authors = [
  {name = "Christian D. Powell", email = "cpowell74@gatech.edu"},
]
maintainers = [
  {name = "Christian D. Powell", email = "cpowell74@gatech.edu"}
]
description = "A Python3 package for generating random variates."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["random variable", "distribution", "monte carlo", "simulation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
"Bug Tracker" = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"